test/fail/integration/_fail_sem_decl_value_4.hs
x :: Int
x = 4.5
main = print "hello"